...
            android:textSize="32sp"
            android:textStyle="normal"
            android:visibility="visible"
            tools:text="Contaminant" />

        <Button
            android:id="@+id/buttonNoDilution"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/green_button"
            android:minHeight="80dp"
            android:minWidth="300dp"
            android:paddingBottom="30dp"
            android:paddingTop="30dp"
            android:text="@string/noDilution"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/buttonDilution1"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/green_button"
            android:minHeight="80dp"
            android:minWidth="300dp"
            android:paddingBottom="30dp"
            android:paddingTop="30dp"
            android:textAllCaps="true"
            tools:text="@string/timesDilution" />

        <Button
            android:id="@+id/buttonDilution2"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/green_button"
            android:minHeight="80dp"
...
            android:textSize="24sp"
            android:textStyle="normal"
            android:visibility="visible"
            tools:text="0.00 ppm" />

        <TextView
            android:id="@+id/textDilution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/amber"
...
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="70dp">

            <Button
                android:id="@+id/buttonStart"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_orange"
                android:text="@string/start"
                tools:ignore="UnusedAttribute" />
...
