<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~  This file is part of Akvo Caddisfly
  ~
  ~  Akvo Caddisfly is free software: you can redistribute it and modify it under the terms of
  ~  the GNU Affero General Public License (AGPL) as published by the Free Software Foundation,
  ~  either version 3 of the License or any later version.
  ~
  ~  Akvo Caddisfly is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~  without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~  See the GNU Affero General Public License included below for more details.
  ~
  ~  The full license text can also be seen at <http://www.gnu.org/licenses/agpl.html>.
  -->

<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="appName">"Akvo Caddisfly"</string>

    <!--Common-->
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="reset">Reset</string>
    <string name="delete">Delete</string>
    <string name="error">Error</string>
    <string name="general">General</string>
    <string name="other">Other</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="swatches">Swatches</string>
    <string name="calibrated">Calibrated</string>
    <string name="calibrating">Calibrating</string>

    <!--Messages-->
    <string name="pleaseWait">Please wait…</string>
    <string name="enableInternet">Internet connection required</string>
    <string name="notSupported">Not Supported</string>
    <string name="phoneDoesNotSupport">This phone does not support this feature</string>
    <string name="pleaseEnterValue">Enter a value</string>
    <string name="calibrationSucceeded">Calibration was successful</string>
    <string name="diagnosticModeEnabled">Diagnostic mode enabled</string>
    <string name="diagnosticModeDisabled">Diagnostic mode disabled</string>

    <!--Main Screen-->
    <string name="watchVideo">Watch</string>
    <string name="demonstration">Demo</string>
    <string name="startSurvey">Start Survey</string>
    <string name="errorAkvoFlowRequired">Please install Akvo Flow app</string>
    <string name="errorCameraFlashRequired">This phone does not have a Camera Flash which is required by Caddisfly</string>
    <string name="errorTestNotAvailable">This test is not available</string>
    <string name="errorCalibrationIncomplete">Calibration is incomplete. Do you want to calibrate now?</string>
    <string name="diagnosticAbbreviated">Diag</string>
    <string name="enableUserMode">Enable User Mode</string>

    <!--Settings Screen-->
    <string name="settings">Settings</string>
    <string name="calibrate">Calibrate</string>
    <string name="calibrateSummary">Calibrate colorimeter or external sensors</string>
    <string name="updateCheck">Check update</string>
    <string name="updateSummary">Check if a new version is available</string>
    <string name="dataConnection">Data Connection</string>
    <string name="about">About</string>
    <string name="displaysVersionNumber">Displays version number</string>
    <string name="language">Language</string>

    <!--Calibration Screen-->
    <string name="errorLoadingTestTypes">Error loading test types. Verify that <xliff:g id="filename">tests.json</xliff:g> file is valid.</string>

    <!--Test Progress Screen-->
    <string name="analyzingWait">Analyzing…</string>
    <string name="placeDeviceInStand">Place the phone face down on a flat surface</string>
    <string name="waitTillCameraSound">and wait for test to complete</string>
    <string name="errorTestInterrupted">Test was interrupted. Do not move the phone during the test.</string>
    <string name="errorTestFailed">Solution color out of range. Check cartridge placement.</string>

    <!--Result Screen-->
    <string name="result">Result</string>
    <string name="backToSurvey">Back to Survey</string>
    <string name="highLevelsFound">%1$s contamination is very high</string>
    <string name="tryWith50PercentSample" tools:ignore="StringFormatInvalid">Try again with a dilution of 50% sample water</string>
    <string name="tryWith25PercentSample" tools:ignore="StringFormatInvalid">Try again with a dilution of 25% sample water</string>

    <!--Sensor Details Screen-->
    <string name="deviceConnectSensor">Connect Akvo EC Sensor</string>
    <string name="deviceConnecting">Connecting to Device</string>
    <string name="deviceConnected">Device Connected</string>
    <string name="electricalConductivityResult">EC %1$s μS/cm</string>
    <string name="acceptResult">Accept Result</string>

    <!--Dilution Selection Dialog-->
    <string name="selectDilution">Select Dilution</string>
    <string name="hundredPercentSampleWater" formatted="false">No Dilution</string>
    <string name="fiftyPercentSampleWater" formatted="false">50% Sample Water</string>
    <string name="twentyFivePercentSampleWater" formatted="false">25% Sample Water</string>

    <!--EC Sensor Calibration-->
    <string name="notConnected">Sensor not Connected</string>
    <string name="lowEcSolution">Step 1: Low EC Solution</string>
    <string name="suspendEcSensorInLow">Suspend EC Sensor in the LOW EC solution</string>
    <string name="enterItsMeasuredLow">Enter its pre-measured LOW EC value below</string>
    <string name="highEcSolution">Step 2: High EC Solution</string>
    <string name="suspendEcSensorInHigh">Suspend EC Sensor in the HIGH EC solution</string>
    <string name="enterItsMeasuredHigh">Enter its pre-measured HIGH EC value below</string>

    <!--App update-->
    <string name="updateApp">Akvo Caddisfly update</string>
    <string name="updateCheckingFor">Checking for updates…</string>
    <string name="updateRequest">An updated version is available, Do you want to update now?</string>
    <string name="updateFetching">Getting Akvo Caddisfly update…</string>
    <string name="updatedAlready">You already have the latest version of Akvo Caddisfly installed</string>

    <!--About Screen-->
    <string name="waterQualitySystem">Water Quality System</string>
    <string name="companyOtherName">Akvo Foundation</string>
    <string name="copyrightMessage">Copyright © Stichting Akvo</string>

    <!--Save / Load Calibration-->
    <string name="saveCalibration">Save Calibration</string>
    <string name="saveProvideFileName">Give a descriptive name for this calibration</string>
    <string name="saveInvalidFileName">Invalid file name</string>
    <string name="saveNameAlreadyExists">Name already exists. Overwrite file?</string>
    <string name="saveConfirmOverwriteFile">Overwrite File</string>
    <string name="loadCalibration">Load Calibration</string>
    <string name="notFound">Not Found</string>
    <string name="loadFilesNotAvailable">There are no previously saved calibrations</string>
    <string name="deleteConfirm">Selected items will be deleted</string>
    <string name="errorLoadingFile">Could not load file. Check file for errors.</string>

    <!--Diagnostic Settings-->
    <string name="cameraPreview">Colorimeter camera</string>
    <string name="externalCamera">Colorimeter external camera</string>
    <string name="testSensor">EC Sensor</string>
    <string name="autoFocus">Auto Focus</string>
    <string name="useFlashMode">Use Flash Mode</string>
    <string name="ignoreShakeDuringAnalysis">Ignore shake during analysis</string>
    <string name="debuggingOn">Show debug messages</string>
    <string name="noSound">No Sound</string>
    <string name="deviceConnectExternalCamera">Connect Caddisfly external sensor</string>
</resources>
