...
                android:visibility="visible"
                app:background="@{``}"
                tools:background="@color/primary"
                tools:text="@string/timesDilution" />

            <TextView
                android:id="@+id/textResult"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:gravity="center_vertical"
                android:textSize="60sp"
...
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_flipped_play_arrow"
                android:onClick="onTestWithDilution"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:text="@string/testWithDilution"
                android:textAlignment="textStart"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
...
